--- a/latex_thesis/parts/conclusion.tex
+++ b/latex_thesis/parts/conclusion.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusion} 
 \label{chap:Conclusion}
-This project explored the effectiveness of three stateful fuzzing tools—Fallaway, AFLNet, and ChatAFL—when applied to the Lighttpd web server. The study aimed to evaluate each tool, focusing on aspects like coverage, efficiency, and adaptability.
+This thesis explored the effectiveness of three stateful fuzzers—Fallaway, AFLNet, and ChatAFL—when applied to the Lighttpd web server. The study aimed to evaluate each tool, focusing on aspects like coverage, efficiency, and adaptability.
 \\\\The importance of stateful fuzzing has been discussed, particularly for applications where internal states and state transitions significantly impact behavior, such as web servers and network-based applications. Stateful fuzzing techniques were shown to be crucial in effectively testing these SUTs, as they consider the influence of previous interactions on the application's current state.
 \\\\The research also involved comparing the setup processes for each fuzzer. Each tool required a different configuration and environment setup to achieve optimal performance. For instance, Fallaway's modifications to Lighttpd required a persistent mode to maintain server states across multiple requests. ChatAFL leverages large language models (LLMs) for generating inputs, while AFLNet utilizes a network-aware approach to enhance its fuzzing capabilities.
 \\\\Additionally, various graphs were presented to illustrate the comparative results of the fuzzers. These showed differences in execution counts, code coverage achieved over time, and other performance metrics, providing a clearer understanding of how each tool behaves in different scenarios. 
