--- a/latex_thesis/parts/chapter1.tex
+++ b/latex_thesis/parts/chapter1.tex
@@ -8,6 +8,6 @@ Taking some examples of these technologies, there is \textbf{SAGE} ~\cite{sage},
 \\\textit{Stateful fuzzing} is an advanced approach for solving the problems of applications that rely on state models. Whereas in \textit{stateless fuzzing}, each input is considered a unique event, stateful fuzzing emulates the flow of activities along with the succeeding changes in the state of an application. It includes the generation of inputs which consider previous interactions and what these have done to the state of the application, hence providing a more realistic and deeper testing process.
 \\In this thesis, we tested \textbf{Lighttpd} ~\cite{lighttpd}, an \textit{open-source web server} recognized for its effectiveness and ability to scale, to manage a substantial number of concurrent connections. Assessing Lighttpd offers a chance to scrutinize stateful fuzzing methodologies.
 \\This thesis focuses on the benchmarking of stateful fuzzers to ascertain their efficiency in \textit{coverage} in Lighttpd. The reviewed stateful fuzzers are: \textbf{Fallaway}, \textbf{AFLNet} and \textbf{ChatAFL}. Each of them has a its own approach toward stateful fuzzing.
-\\By analyzing the performance of all these tools, this thesis will report the various strengths and weaknesses of each, which gives necessary suggestions for improving stateful fuzzing techniques and enhancing the security of modern software systems.
+\\By analyzing the performance of all these fuzzers, this thesis will report the various strengths and weaknesses of each, which gives necessary suggestions for improving stateful fuzzing techniques and enhancing the security of modern software systems.
 \\The thesis is structured as follows: Chapter \ref{chap:background}, provides an overview of the background about fuzzing, fuzzers used in this thesis and the target. Chapter \ref{chap:Setup}, describes the setup of the environment and the configuration of the fuzzers. Chapter \ref{chap:Results}, presents the results obtained from the experiments.
 \\Finally, Chapter \ref{chap:Conclusion}, summarizes the findings and provides suggestions for future work.
